examples/test/testpolicy3779.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3779
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key46: value7
      key4: value35
      key5: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value33
          key1: value6
      podSelector:
        matchLabels:
          key43: value3
          key7: value12
          key23: value40
